<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/item_header_margin"
        android:paddingTop="@dimen/item_padding_vertical"
        android:paddingEnd="@dimen/item_header_margin"
        android:paddingBottom="@dimen/item_padding_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/theme_mode_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:selectionRequired="true"
            app:singleSelection="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/theme_mode_system"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/theme_mode_system" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/theme_mode_dark"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/theme_mode_dark" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/theme_mode_light"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/theme_mode_light" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>
</layout>
