<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="surface"
            type="com.github.kr328.clash.design.ui.Surface" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@{surface.insets.start}"
        android:paddingTop="@{surface.insets.top}"
        android:paddingEnd="@{surface.insets.end}"
        android:paddingBottom="@{surface.insets.bottom}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_view"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="@dimen/item_header_margin"
                android:paddingEnd="48dp"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <ImageView
                android:id="@+id/new_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginTop="-48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/_new"
                android:focusable="true"
                android:padding="12dp"
                android:src="@drawable/ic_baseline_add" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <Button
                    android:id="@+id/reset_view"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/reset" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/cancel_view"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/cancel" />
                    <Button
                        android:id="@+id/ok_view"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/ok" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
